Table overflow-x issue
Fixes #234

--- a/css/style.css
+++ b/css/style.css
@@ -439,7 +439,7 @@ details + dl {
 
 table {
     table-layout: fixed;
-    width: 106%;
+    width: 100%;
     overflow-wrap: anywhere;
     font: 0.775em/1.2 Lato, sans-serif;
 }
